--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and Deploy to GitHub Pages
 
 permissions: {}
 
@@ -15,9 +15,56 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
-    - run: rustup update
-    - run: cargo build --release
-    - uses: actions/upload-artifact@v4
-      with:
-        path: target/release/mylibrary.dll
+      # Check out the repository
+      - uses: actions/checkout@v4
+
+      # Update Rust and install wasm-pack
+      - run: rustup update
+      - run: rustup target add wasm32-unknown-unknown
+      - run: cargo install wasm-pack
+
+      # Build the Rust project for WebAssembly
+      - name: Build WASM
+        run: wasm-pack build --target web --out-dir dist
+
+      # Export to index.html
+      - name: Create index.html
+        run: |
+          echo '<!DOCTYPE html>
+          <html>
+          <head>
+            <title>WASM Demo</title>
+          </head>
+          <body>
+            <script type="module">
+              import init from "./dist/<your_crate_name>.js";
+              init();
+            </script>
+          </body>
+          </html>' > index.html
+
+      # Upload release build artifact
+      - uses: actions/upload-artifact@v4
+        with:
+          path: target/release/mylibrary.dll
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      # Check out the repository
+      - uses: actions/checkout@v4
+
+      # Copy built WASM files and index.html to the root
+      - name: Setup GitHub Pages
+        run: |
+          mkdir -p gh-pages
+          cp -r dist/* gh-pages/
+          cp index.html gh-pages/
+
+      # Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: gh-pages
