--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,19 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.15.0"
+bevy_ecs_tilemap = "0.15.0"
+tiled = "0.11.0"
+ldtk_rust = "0.6"
+
+[dev-dependencies]
+ldtk_rust = { version = "0.6" }
+rand = "0.8"
+serde_json = { version = "1.0" }
+tiled = { version = "0.11.0", default-features = false }
+thiserror = { version = "1.0" }
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
