--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ bevy = "0.15.0"
 bevy_ecs_tilemap = "0.15.0"
 tiled = "0.11.0"
 ldtk_rust = "0.6"
+thiserror = "1.0"
+serde_json = "1.0"
+rand = "0.8"
+log = "0.4"
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
