Add a step in our pipeline to not rebuild every dependency everytime

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+            # Cache cargo dependencies
+      - name: Cache Cargo registry
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+
       - name: Update Rust and Add Target
         run: |
           rustup update
