--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = "1.0"
 serde_json = "1.0"
 rand = "0.8"
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
+serde = "1.0.217"
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
