--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 # Cargo lock file for reproducibility (if you want to exclude it)
 Cargo.lock
 
+# Developer specific commands
+cmds.txt
+
 # Rust-specific configuration files
 /.cargo
 
