--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0"
 rand = "0.8"
 log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
 serde = "1.0.217"
+noise = "0.9"
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
