--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "baba_yaga"
 version = "0.1.0"
 edition = "2021"
 
-[package.metadata]
+[package.metadata.wasm-pack.profile.release]
 wasm-opt = false
 
 [dependencies]
