--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bevy = "0.15.0"
 bevy_ecs_tilemap = "0.15.0"
 bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
+bevy-inspector-egui = "0.29"
 avian2d = "0.2.0"
 tiled = "0.11.0"
 ldtk_rust = "0.6"
