WASM, Gold Drops, Magnets, Drop Rates (#26)
* Clean up WASM window debug code. Add gold spawn, magnet, autoloot functionality

* Debugging WASM build

Attempt to fix JS code 
```
rogue_lite_arpg/:23 Uncaught SyntaxError: Unexpected token '.' (at rogue_lite_arpg/:23:32)
```

* Tune magnet, gold drops, make chests give gold instead of health pots

* Clean up comments & update gitignore for my new VSbuild tools stuff

* Force remove .vs file

* Desperately try to get WASM to actually work

* Desperately try to get WASM to actually work 2

* Anotha 1

* pls work wasm

* Change magnets to children. WIP they are not working rn

* Give alternative RON methods for WASM

* WASM RON Fix #2: Path Correction

* Wasm fix #18343, going to work this time for sure

* Magnets move at the inverse cube of the distance between poles

* Wasm fix #1 - Its fixed

* Its fixed again

* Change autoloot to use colliding entities

* Organize startup plugins

* Fix the all weapons on the ground bug, improve magnets

* Add coins to inventory, drop enemy coins based on player luck

* Clean up un-needed warning

* Stop tracking .vs directory

* Give grounded coins the same collision layers as grounded items

* PR Feedback: Required Components

* PR Feedback: Inventory Builder

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - main
+      - deployment_debug
 
 env:
   CARGO_INCREMENTAL: 0
@@ -78,35 +79,35 @@ jobs:
           cp Cargo.lock gh-pages/     
           cp package.json gh-pages/                                       
           echo '<!DOCTYPE html>
-                <html>
-                <head>
-                    <meta charset="utf-8"/>
-                    <title>Bevy game</title>
-                    <style>
-                        body {
-                            margin: 0;
-                            height: 100vh;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;
-                            background: #333;
-                        }
-                        canvas {
-                            background-color: white;
-                        }
-                    </style>
-                </head>
-                <body>
-                    <script type="module">
-                        console.log("Starting import...");
-                        import init from './baba_yaga.js';
-                        console.log("Import completed, initializing...");
-                        init().catch((error) => {
-                            console.error("Error during initialization:", error);
-                        });
-                    </script>
-                </body>
-                </html>' > gh-pages/index.html
+            <html>
+            <head>
+                <meta charset="utf-8"/>
+                <title>Bevy game</title>
+                <style>
+                    body {
+                        margin: 0;
+                        height: 100vh;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        background: #333;
+                    }
+                    canvas {
+                        background-color: white;
+                    }
+                </style>
+            </head>
+            <body>
+                <script type="module">
+                    console.log("Starting import...");
+                    import init from "./baba_yaga.js";
+                    console.log("Import completed, initializing...");
+                    init().catch((error) => {
+                        console.error("Error during initialization:", error);
+                    });
+                </script>
+            </body>
+            </html>' > gh-pages/index.html
 
       - name: Debug gh-pages Directory
         run: |
