--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 wasm-opt = false
 
 [dependencies]
-bevy = "0.15.0"
+bevy = { version = "0.15.0", features = ["dynamic_linking"] }
 bevy_ecs_tilemap = "0.15.0"
 bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
 avian2d = "0.2.0"
