--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ console_error_panic_hook = "0.1"
 bevy-inspector-egui = { version = "0.29.1", optional = true }
 egui_plot = { version = "0.30.0", optional = true }
 egui_extras = { version = "0.30.0", optional = true }
-tracing = { version = "0.1.41", optional = true, features = ["attributes"] }
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
@@ -53,7 +52,7 @@ path = "src/main.rs"
 [features]
 atlas = []
 debug = ["dep:bevy-inspector-egui", "dep:egui_plot", "dep:egui_extras"]
-trace = ["bevy/trace_tracy", "bevy/trace", "dep:tracing"]
+trace = ["bevy/trace_tracy", "bevy/trace"]
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
