--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -16,17 +16,23 @@ ldtk_rust = "0.6"
 thiserror = "1.0"
 serde_json = "1.0"
 rand = "0.8"
-log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
+log = { version = "*", features = [
+  "max_level_debug",
+  "release_max_level_warn",
+] }
 serde = "1.0.217"
 noise = "0.9"
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = [
-    "Document",
-    "Window",
-    "Element",
-    "HtmlCanvasElement",
+  "Document",
+  "Window",
+  "Element",
+  "HtmlCanvasElement",
 ] }
 console_error_panic_hook = "0.1"
+bevy-inspector-egui = { version = "0.29.1", optional = true }
+egui_plot = { version = "0.30.0", optional = true }
+egui_extras = { version = "0.30.0", optional = true }
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
@@ -36,15 +42,17 @@ tiled = { version = "0.11.0", default-features = false }
 thiserror = { version = "1.0" }
 
 [lib]
-name = "baba_yaga" # for wasm stuff
+name = "baba_yaga"              # for wasm stuff
 crate-type = ["cdylib", "rlib"]
 
 [[bin]]
-name = "baba_yaga_bin"  # for local build stuff
+name = "baba_yaga_bin" # for local build stuff
 path = "src/main.rs"
 
 [features]
 atlas = []
+debug = ["dep:bevy-inspector-egui", "dep:egui_plot", "dep:egui_extras"]
+trace = ["bevy/trace_tracy", "bevy/trace"]
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
