--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,7 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
+
+# for Windows, adds alternative faster linking for dynamic linking (improves compile times)
+[target.x86_64-pc-windows-msvc]
+linker = "rust-lld.exe"
