--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,10 @@ jobs:
         run: cargo install wasm-pack
       - name: Build WASM
         run: wasm-pack build --target web --out-dir dist
+      - name: Copy assets to dist folder
+        run: |
+          mkdir -p dist/assets
+          cp -r assets/* dist/assets/
       - name: Debug Build Output
         run: |
           echo "Debugging build output:"
