--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: nschloe/action-cached-lfs-checkout@v1
+      - uses: actions/checkout@v4
       # Cache cargo dependencies
       - name: Cache Cargo registry
         uses: actions/cache@v4
@@ -33,10 +33,6 @@ jobs:
         run: cargo install wasm-pack
       - name: Build WASM
         run: wasm-pack build --target web --out-dir dist
-      - name: Copy assets to dist folder
-        run: |
-          mkdir -p dist/assets
-          cp -r assets/* dist/assets/
       - name: Debug Build Output
         run: |
           echo "Debugging build output:"
