--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 wasm-opt = false
 
 [dependencies]
-bevy = { version = "0.15.0", features = ["dynamic_linking"] }
-bevy_ecs_tilemap = "0.15.0"
-bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
+bevy = { version = "0.16.0-rc.1", features = ["dynamic_linking"] }
+# bevy_ecs_tilemap = "0.15.0"
+# bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
 accesskit = "0.17"
-avian2d = "0.2.0"
+avian2d = { git = "https://github.com/Jondolf/avian.git", branch = "main" }
 tiled = "0.11.0"
 ldtk_rust = "0.6"
 thiserror = "1.0"
@@ -31,7 +31,7 @@ web-sys = { version = "0.3", features = [
   "HtmlCanvasElement",
 ] }
 console_error_panic_hook = "0.1"
-bevy-inspector-egui = { version = "0.29.1", optional = true }
+# bevy-inspector-egui = { version = "0.29.1", optional = true }
 egui_plot = { version = "0.30.0", optional = true }
 egui_extras = { version = "0.30.0", optional = true }
 
@@ -52,7 +52,7 @@ path = "src/main.rs"
 
 [features]
 atlas = []
-debug = ["dep:bevy-inspector-egui", "dep:egui_plot", "dep:egui_extras"]
+# debug = ["dep:bevy-inspector-egui", "dep:egui_plot", "dep:egui_extras"]
 trace = ["bevy/trace_tracy", "bevy/trace"]
 
 # Enable a small amount of optimization in the dev profile.
