--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ bevy-inspector-egui = { version = "0.29.1", optional = true }
 egui_plot = { version = "0.30.0", optional = true }
 egui_extras = { version = "0.30.0", optional = true }
 bevy_enhanced_input = "0.8.0"
+color-eyre = "0.6.3"
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
