--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,3 +64,6 @@ web-sys = { version = "0.3", features = [
   "HtmlCanvasElement",
 ] }
 console_error_panic_hook = "0.1"
+
+[lints.clippy]
+type_complexity = "allow"
