--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,6 @@ web-sys = { version = "0.3", features = [
   "HtmlCanvasElement",
 ] }
 console_error_panic_hook = "0.1"
-bevy-inspector-egui = { version = "0.29.1", optional = true }
-egui_plot = { version = "0.30.0", optional = true }
-egui_extras = { version = "0.30.0", optional = true }
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
@@ -52,7 +49,6 @@ path = "src/main.rs"
 
 [features]
 atlas = []
-debug = ["dep:bevy-inspector-egui", "dep:egui_plot", "dep:egui_extras"]
 trace = ["bevy/trace_tracy", "bevy/trace"]
 
 # Enable a small amount of optimization in the dev profile.
@@ -62,3 +58,6 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
+
+[lints.clippy]
+type_complexity = "allow"
