--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,9 @@ web-sys = { version = "0.3", features = [
 ] }
 console_error_panic_hook = "0.1"
 rhai = { version = "1.21.0", features = ["sync"], optional = true }
-async-channel = { version = "2.3.1" }
+async-channel = "2.3.1"
 anyhow = "1.0.97"
+humansize = "2.1.3"
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
