--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,8 +33,8 @@ web-sys = { version = "0.3", features = [
 console_error_panic_hook = "0.1"
 rhai = { version = "1.21.0", features = ["sync"], optional = true }
 async-channel = "2.3.1"
-anyhow = "1.0.97"
 humansize = "2.1.3"
+color-eyre = "0.6.3"
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
