--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ default-run = "baba_yaga"
 wasm-opt = false
 
 [dependencies]
-bevy = { version = "0.15.0", features = ["dynamic_linking"] }
+bevy = { version = "0.15.3", features = ["dynamic_linking"] }
 bevy_ecs_tilemap = "0.15.0"
 bevy_asset_loader = { version = "0.22.0", features = ["2d"] }
 accesskit = "0.17"
-avian2d = "0.2.0"
-tiled = "0.11.0"
+avian2d = "0.2.1"
+tiled = "0.11.2"
 ldtk_rust = "0.6"
 thiserror = "1.0"
 serde_json = "1.0"
@@ -22,7 +22,7 @@ log = { version = "*", features = [
   "max_level_debug",
   "release_max_level_warn",
 ] }
-serde = "1.0.217"
+serde = "1.0.219"
 noise = "0.9"
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = [
@@ -36,12 +36,20 @@ rhai = { version = "1.21.0", features = ["sync"], optional = true }
 async-channel = "2.3.1"
 humansize = "2.1.3"
 anyhow = "1.0.97"
+crossterm = { version = "0.28.1", features = ["event-stream"] }
+ratatui = "0.29.0"
+async-executor = "1.13.1"
+tracing = "0.1.41"
+futures-lite = "2.6.0"
+tracing-subscriber = "0.3.19"
+futures-concurrency = "7.6.3"
+async-io = "2.4.0"
 
 [dev-dependencies]
 ldtk_rust = { version = "0.6" }
 rand = "0.8"
 serde_json = { version = "1.0" }
-tiled = { version = "0.11.0", default-features = false }
+tiled = { version = "0.11.2", default-features = false }
 thiserror = { version = "1.0" }
 
 [lib]
