--- a/main/Cargo.toml
+++ b/main/Cargo.toml
@@ -15,7 +15,7 @@ name = "baba_yaga_bin" # for local build stuff
 path = "src/main.rs"
 
 [dependencies]
-bevy = { version = "0.16.0", features = ["dynamic_linking"] }
+bevy = { version = "0.16.0", features = ["dynamic_linking", "bevy_dev_tools"] }
 bevy_ecs_tilemap = { version = "0.16" }
 bevy_asset_loader = { version = "0.23", features = ["2d"] }
 bevy_behave = { version = "0.3" }
