--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "baba_yaga"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [package.metadata.wasm-pack.profile.release]
 wasm-opt = false
@@ -15,14 +15,13 @@ name = "baba_yaga_bin" # for local build stuff
 path = "src/main.rs"
 
 [dependencies]
-bevy = { version = "0.16.0", features = ["dynamic_linking", "bevy_dev_tools"] }
-bevy_ecs_tilemap = { version = "0.16" }
-bevy_asset_loader = { version = "0.23", features = ["2d"] }
-bevy_behave = { version = "0.3" }
-accesskit = "0.17"
-avian2d = "0.3"
-rand = "0.8"
-bevy_bundled_observers = "0.2"
+bevy = { version = "0.17.0", features = ["dynamic_linking", "bevy_dev_tools", "experimental_bevy_feathers"] }
+bevy_ecs_tilemap = { git = "https://github.com/ChristopherBiscardi/bevy_ecs_tilemap", branch = "bevy-0.17" }
+bevy_asset_loader = { version = "0.24.0-rc.1", features = ["2d"] }
+bevy_behave = { git = "https://github.com/HazelTheWitch/bevy_behave", branch = "main" }
+accesskit = "0.21"
+avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
+rand = "0.9"
 log = { version = "*", features = [
   "max_level_debug",
   "release_max_level_warn",
