--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,13 +22,19 @@ bevy_behave = { git = "https://github.com/HazelTheWitch/bevy_behave", branch = "
 accesskit = "0.21"
 avian2d = { git = "https://github.com/Jondolf/avian", branch = "main" }
 rand = "0.9"
-log = { version = "*", features = [
-  "max_level_debug",
-  "release_max_level_warn",
+
+serde = "1.0.228"
+
+# Compile out low-severity logs to improve performance.
+# Remove these features if you want to profile your game with tracy.
+# (see <https://github.com/bevyengine/bevy/blob/main/docs/profiling.md#tracy-profiler>)
+tracing = { version = "0.1", features = [
+    "max_level_debug",
+    "release_max_level_warn",
 ] }
-serde = "1.0.217"
 
 [target.wasm32-unknown-unknown.dependencies]
+getrandom = { version = "0.3", features = ["wasm_js"] }
 wasm-bindgen = "0.2"
 web-sys = { version = "0.3", features = [
   "Document",
