--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ env:
   CARGO_INCREMENTAL: 0
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: nschloe/action-cached-lfs-checkout@v1
       - name: Install Rust toolchain
@@ -41,19 +41,20 @@ jobs:
           cargo binstall --locked --no-confirm --force wasm-opt
           bevy build --locked --release --yes web --bundle
           mv 'target/bevy_web/web-release/${{ env.cargo_build_binary_name }}' '${{ env.app }}'
-      - name: Copy assets to dist folder
-        run: |
-          mkdir -p dist/assets
-          cp -r assets/* dist/assets/
       - name: Debug Build Output
         run: |
           echo "Debugging build output:"
           ls
+      - name: Package app
+        working-directory: tmp/app
+        run: |
+            zip --recurse-paths '${{ env.package }}' '${{ env.app_package_name }}'
       - name: Upload WASM Artifacts
         uses: actions/upload-artifact@v4
         with:
-          path: dist/*
+          path: tmp/app/${{ env.package }}
           name: wasm-artifacts
+          retention-days: 1
       - name: Upload web bundle to workflow artifacts for GitHub Pages (Web)
         uses: actions/upload-pages-artifact@v3
         with:
@@ -164,28 +165,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: gh-pages
           keep_files: true  # Important to maintain other PR deployments
-
-  test:
-    needs: deploy
-    runs-on: windows-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Update Rust
-        run: rustup update
-      - name: Cache Cargo registry
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/registry
-            ~/.cargo/git
-          key: ${{ runner.os }}-cargo-test-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-test-
-      - name: Run Cargo Tests
-        run: |
-          echo "Running Cargo tests..."
-          cargo test
-      - name: Report Test Results
-        if: always()
-        run: |
-          echo "Tests completed. This step runs after deployment and won't block the workflow."
