--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Build and Deploy to GitHub Pages
 permissions:
-  contents: write
+  # Required to deploy to GitHub Pages.
+  pages: write
+  # Required for GitHub Pages to verify the source of the deployment.
+  # See: <https://github.com/actions/deploy-pages/issues/329>.
+  id-token: write
 on:
   push:
     branches:
@@ -93,91 +97,14 @@ jobs:
     # Set environment variable for the directory name based on PR or main branch
     env:
       DEPLOY_DIR: ${{ github.event_name == 'pull_request' && format('pr-{0}', github.event.pull_request.number) || 'main' }}
+    environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}/${{ env.DEPLOY_DIR }}
     steps:
-      - uses: actions/checkout@v4
-      - name: Download Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: wasm-artifacts
       - name: Debug Download Output
         run: |
           echo "Debugging downloaded artifacts:"
           ls
-      - name: Create gh-pages Directory
-        run: |
-          mkdir -p gh-pages/${{ env.DEPLOY_DIR }}
-          cp -r assets gh-pages/${{ env.DEPLOY_DIR }}/
-          cp -r src gh-pages/${{ env.DEPLOY_DIR }}/
-          cp baba_yaga.js gh-pages/${{ env.DEPLOY_DIR }}/
-          cp baba_yaga_bg.wasm gh-pages/${{ env.DEPLOY_DIR }}/
-          cp baba_yaga_bg.wasm.d.ts gh-pages/${{ env.DEPLOY_DIR }}/
-          cp Cargo.toml gh-pages/${{ env.DEPLOY_DIR }}/
-          cp Cargo.lock gh-pages/${{ env.DEPLOY_DIR }}/
-          cp package.json gh-pages/${{ env.DEPLOY_DIR }}/
-          echo '<!DOCTYPE html>
-          <html>
-          <head>
-          <meta charset="utf-8"/>
-          <title>Bevy game - ${{ env.DEPLOY_DIR }}</title>
-          <style>
-          body {
-          margin: 0;
-          height: 100vh;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background: #333;
-          }
-          canvas {
-          background-color: white;
-          }
-          </style>
-          </head>
-          <body>
-          <script type="module">
-          console.log("Starting import...");
-          import init from "./baba_yaga.js";
-          console.log("Import completed, initializing...");
-          init().catch((error) => {
-          console.error("Error during initialization:", error);
-          });
-          </script>
-          </body>
-          </html>' > gh-pages/${{ env.DEPLOY_DIR }}/index.html
-          
-          # Create a simple index at the root listing all deployments
-          if [ "${{ github.event_name }}" == "push" ] && [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo '<!DOCTYPE html>
-            <html>
-            <head>
-              <meta charset="utf-8"/>
-              <title>Bevy Game Deployments</title>
-              <style>
-                body { font-family: Arial, sans-serif; margin: 2rem; }
-                h1 { color: #333; }
-                ul { list-style-type: none; padding: 0; }
-                li { margin: 0.5rem 0; }
-                a { color: #0366d6; text-decoration: none; }
-                a:hover { text-decoration: underline; }
-                .main { font-weight: bold; }
-              </style>
-            </head>
-            <body>
-              <h1>Bevy Game Deployments</h1>
-              <ul>
-                <li><a href="./main/" class="main">Main Branch (Stable)</a></li>
-            ' > gh-pages/index.html
-            
-            # Find all PR directories and add them to the index
-            find gh-pages -maxdepth 1 -type d -name "pr-*" | sort -r | while read dir; do
-              pr_name=$(basename "$dir")
-              echo "    <li><a href=\"./$pr_name/\">$pr_name</a></li>" >> gh-pages/index.html
-            done
-            
-            echo '  </ul>
-            </body>
-            </html>' >> gh-pages/index.html
-          fi
       - name: Debug gh-pages Directory
         run: |
           echo "Debugging gh-pages directory:"
@@ -187,8 +114,5 @@ jobs:
             ls -l gh-pages/${{ env.DEPLOY_DIR }}
           fi
       - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: gh-pages
-          keep_files: true  # Important to maintain other PR deployments
+        id: deploy
+        uses: actions/deploy-pages@v4
